--- a/pygameispygame.ipynb
+++ b/pygameispygame.ipynb
@@ -44,6 +44,30 @@
     "#게임 종료 \n",
     "py.quit()\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: pygame in c:\\users\\user\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (2.5.0)\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: Ignoring invalid distribution -ip (c:\\users\\user\\appdata\\local\\programs\\python\\python39\\lib\\site-packages)\n",
+      "WARNING: Ignoring invalid distribution -ip (c:\\users\\user\\appdata\\local\\programs\\python\\python39\\lib\\site-packages)\n"
+     ]
+    }
+   ],
+   "source": []
   }
  ],
  "metadata": {
@@ -62,7 +86,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.9.6"
   },
   "orig_nbformat": 4
  },
