--- a/pygameispygame.ipynb
+++ b/pygameispygame.ipynb
@@ -47,14 +47,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: pygame in c:\\users\\user\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (2.5.0)\n",
+      "Collecting pygame\n",
+      "  Downloading pygame-2.5.0-cp39-cp39-win_amd64.whl (10.5 MB)\n",
+      "Installing collected packages: pygame\n",
+      "Successfully installed pygame-2.5.0\n",
       "Note: you may need to restart the kernel to use updated packages.\n"
      ]
     },
@@ -62,12 +65,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "WARNING: Ignoring invalid distribution -ip (c:\\users\\user\\appdata\\local\\programs\\python\\python39\\lib\\site-packages)\n",
-      "WARNING: Ignoring invalid distribution -ip (c:\\users\\user\\appdata\\local\\programs\\python\\python39\\lib\\site-packages)\n"
+      "WARNING: You are using pip version 21.1.3; however, version 23.2.1 is available.\n",
+      "You should consider upgrading via the 'c:\\Users\\User\\AppData\\Local\\Programs\\Python\\Python39\\python.exe -m pip install --upgrade pip' command.\n"
      ]
     }
    ],
-   "source": []
+   "source": [
+    "%pip install pygame"
+   ]
   }
  ],
  "metadata": {
