--- a/pygameisdownload.ipynb
+++ b/pygameisdownload.ipynb
@@ -2,26 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Collecting pygame\n",
-      "  Downloading pygame-2.5.1-cp39-cp39-win_amd64.whl (10.6 MB)\n",
-      "Installing collected packages: pygame\n",
-      "Successfully installed pygame-2.5.1\n",
+      "Requirement already satisfied: pygame in c:\\users\\user\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (2.5.1)\n",
       "Note: you may need to restart the kernel to use updated packages.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING: You are using pip version 21.1.3; however, version 23.2.1 is available.\n",
-      "You should consider upgrading via the 'c:\\Users\\User\\AppData\\Local\\Programs\\Python\\Python39\\python.exe -m pip install --upgrade pip' command.\n"
      ]
     }
    ],
